--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     .Me>*{
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 }
 
@@ -26,7 +27,7 @@
 border-radius: 10px;
 }
 .background1{
-    background-color: rgb(208, 249, 255);
+    background-color: rgb(177, 238, 255);
     margin-top: 100px;
 }
 
@@ -65,7 +66,7 @@ h2{
     border-radius: 20px;
     grid-area: 2/2/3/3;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-left: 150px;
   
 }
@@ -74,12 +75,17 @@ h2{
     border-radius: 20px;
     grid-area: 2/3/4/-1;
     align-self: center;
-    margin-top: 50px;
+    margin-top: 140px;
     margin-left: 150px;
-
+    
 
 }
-
+.F1{
+    margin-top: 40px;
+}
+#section-1{
+    padding-bottom: 100px;
+}
 }
 .MySkills{
     padding-top: 70px;
@@ -92,7 +98,8 @@ h3{
     padding-top: 50px;
     font-family: 'Libre Baskerville', serif;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 50px;
 }
 .List{
     font-size: 25px;
@@ -127,6 +134,18 @@ h3{
     }
 
     .MySkills>*{
-        padding-bottom: -1000px;
+        margin-bottom: -70px;
     }
+   .center1>*{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+   }
+   p{
+    color: rgb(96, 96, 96);
+}
+}
+p{
+    color: rgb(96, 96, 96);
 }
