--- a/style.css
+++ b/style.css
@@ -148,10 +148,10 @@ h3{
     color: rgb(96, 96, 96);
 }
 .si{
-    font-size: 2rem;
+    font-size: 40px;
 }
 .btn{
-    font-size: 2rem;
+    font-size: 40px;
 }
 }
 p{
